# Ziplyne-Lens

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  ziplyne-lens.config.example.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/api/: package.json  vitest.config.ts
apps/api/src/: app.ts  connections.ts  inventory.ts  limits.ts  live.ts  projects.ts  scan-cache.ts  server.ts  session-history.ts  warmer.ts
apps/api/test/: connections.test.ts  inventory.test.ts  limits.test.ts  live.test.ts  projects.test.ts  scan-cache.test.ts  server.test.ts  session-history.test.ts
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/components/: CleanDialog.tsx  CommandPalette.tsx  OpenButtons.tsx  ProgressBar.tsx  RangeTabs.tsx  Sidebar.tsx  SpendChart.tsx  States.tsx  Toggle.tsx  Workspace.tsx
apps/web/src/lib/: api.ts  derive.ts  format.ts  prefs.ts  theme.ts  updater.ts
apps/web/src/screens/: Library.tsx  Now.tsx  (+3 more)
apps/web/test/: updater.test.ts
docs/: config.schema.json
docs/specs/: 2026-07-08-redesign.md  2026-07-08-tauri-prompt-library.md  2026-07-08-ziplyne-lens.md
(+4 files in other folders)
