[package]
name = "ziplyne-lens"
version = "0.1.0"
description = "Local-first AI coding spend and prompt intelligence for macOS."
authors = ["ZipLyne"]
license = "MIT"
repository = "https://github.com/ZipLyne-Agency/ziplyne-lens"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ziplyne_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
tauri-plugin-process = "2.3.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-updater = "2.10.1"
ureq = { version = "3", default-features = false, features = ["json"] }
